--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -14,7 +14,6 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-24.04
-
     strategy:
       matrix:
         arch: [x64, arm64]
@@ -101,7 +100,6 @@ jobs:
         }
         EOF
 
-        # Prepare PKGINFO for Batocera pacman package
         mkdir -p batocera-pkg
         cat <<EOF > batocera-pkg/.PKGINFO
         pkgname = batocode-arcade
@@ -113,7 +111,6 @@ jobs:
         url = https://github.com/${GITHUB_REPOSITORY}
         EOF
 
-        # Copy built files into Batocera package structure
         mkdir -p batocera-pkg/userdata/system/ports/batocode-arcade
         cp -r "$PACKAGE_STAGE_DIR/"* batocera-pkg/userdata/system/ports/batocode-arcade/
 
@@ -131,13 +128,10 @@ jobs:
           VERSION="pr-${GITHUB_SHA::7}"
         fi
 
-        TARGET_DIR_TO_TAR="${{ steps.prepare_package.outputs.target_package_dir_name }}"
-
         cd dist
         TAR_NAME="batocode-arcade-${VERSION}-${{ matrix.arch }}.tar.gz"
-        tar -czf "$TAR_NAME" "$TARGET_DIR_TO_TAR"
+        tar -czf "$TAR_NAME" "${{ steps.prepare_package.outputs.target_package_dir_name }}"
         echo "tarball_path=$PWD/$TAR_NAME" >> $GITHUB_OUTPUT
-        echo "tarball_name=$TAR_NAME" >> $GITHUB_OUTPUT
 
     - name: Build Batocera Pacman package
       id: create_pacman_pkg
@@ -147,52 +141,40 @@ jobs:
         VERSION="${{ steps.prepare_package.outputs.pkg_version }}"
         cd batocera-pkg
         tar --zstd -cf ../batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst .
-        echo "pacman_pkg_path=$(realpath ../batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst)" >> $GITHUB_OUTPUT
-
-    - name: Install pacman tools
-      run: sudo apt-get update && sudo apt-get install -y pacman
 
     - name: Create Pacman Repo Metadata
-      id: pacman_repo
-      run: |
-        set -e
-        PKG_ARCH="${{ steps.prepare_package.outputs.pkg_arch }}"
-        VERSION="${{ steps.prepare_package.outputs.pkg_version }}"
-        mkdir -p pacman-repo
-        cp batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst pacman-repo/
-        cd pacman-repo
-        repo-add batocode-arcade.db.tar.gz batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst
+      uses: addnab/docker-run-action@v3
+      with:
+        image: archlinux
+        options: -v ${{ github.workspace }}:/workspace
+        run: |
+          pacman -Sy --noconfirm devtools
+          cd /workspace
+          PKG_ARCH="${{ steps.prepare_package.outputs.pkg_arch }}"
+          VERSION="${{ steps.prepare_package.outputs.pkg_version }}"
+          mkdir -p pacman-repo
+          cp batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst pacman-repo/
+          cd pacman-repo
+          repo-add batocode-arcade.db.tar.gz batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst
 
-    - name: Sanitize artifact name
-      id: sanitize_name
-      run: |
-        if [[ -n "${GITHUB_REF_NAME}" ]]; then
-          SAFE_REF_NAME="${GITHUB_REF_NAME//\//-}"
-          echo "ARTIFACT_REF_NAME=$SAFE_REF_NAME" >> $GITHUB_ENV
-        else
-          SAFE_SHA="${GITHUB_SHA//\//-}"
-          echo "ARTIFACT_REF_NAME=$SAFE_SHA" >> $GITHUB_ENV
-        fi
-
-    - name: Upload Build Artifact (for GitHub Actions UI)
+    - name: Upload Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: batocode-arcade-linux-${{ matrix.arch }}-${{ env.ARTIFACT_REF_NAME }}
+        name: batocode-arcade-${{ matrix.arch }}-${{ github.ref_name || github.sha }}
         path: |
-          ${{ steps.create_tarball.outputs.tarball_path }}
-          ${{ steps.create_pacman_pkg.outputs.pacman_pkg_path }}
-          pacman-repo
-        retention-days: 7
+          dist/*.tar.gz
+          *.pkg.tar.zst
+          pacman-repo/*
+        retention-days: 5
 
-    - name: Create GitHub Release and Upload Bundled Asset
-      id: create_release
+    - name: Create GitHub Release and Upload Assets
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref_name }}
         files: |
-          ${{ steps.create_tarball.outputs.tarball_path }}
-          ${{ steps.create_pacman_pkg.outputs.pacman_pkg_path }}
+          dist/*.tar.gz
+          *.pkg.tar.zst
           pacman-repo/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
