--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,131 +1,188 @@
-name: Build and Package
+name: Build Linux Release
 
 on:
   push:
+    tags:
+      - 'v*'
+  pull_request:
     branches:
       - main
-  pull_request:
+      - develop
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-linux:
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+
+    runs-on: ubuntu-24.04
+
     strategy:
       matrix:
         arch: [x64, arm64]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Install Node and deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y nodejs npm
+    - name: Set up QEMU (for ARM emulation)
+      if: matrix.arch == 'arm64'
+      uses: docker/setup-qemu-action@v2
 
-      - name: Install Node.js dependencies
-        run: npm ci
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 22
 
-      - name: Build app (creates dist/)
-        run: npm run dist
+    - name: Install Node.js dependencies
+      run: npm ci
 
-      - name: Prepare package directory
-        run: |
-          set -e
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF##refs/tags/}
-            VERSION=${VERSION#v}
-          else
-            VERSION="pr-${GITHUB_SHA:0:7}"
-          fi
+    - name: Install Electron system dependencies
+      run: sudo apt-get update && sudo apt-get install -y libgtk-3-0 libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2t64
 
-          if [[ "${{ matrix.arch }}" == "x64" ]]; then
-            PKG_ARCH="x86_64"
-          else
-            PKG_ARCH="aarch64"
-          fi
+    - name: Ensure dist folder exists
+      run: mkdir -p dist
 
-          mkdir -p batocera-pkg/userdata/roms/ports
+    - name: Build Linux ${{ matrix.arch }} package (unpacked)
+      run: npx electron-builder --linux --${{ matrix.arch }} --dir
 
-          # Copy built app, launcher, media, gamelist.xml, etc. as needed
-          cp -r dist/linux-${{ matrix.arch }}-unpacked/* batocera-pkg/userdata/roms/ports/ || true
-          cp -r resources/batocode-arcade.sh batocera-pkg/userdata/roms/ports/ || true
-          cp -r resources/gamelist.xml batocera-pkg/userdata/roms/ports/ || true
-          cp -r resources/batocode-arcade.png batocera-pkg/userdata/roms/ports/ || true
+    - name: Prepare package directory and launcher script
+      id: prepare_package
+      run: |
+        if [[ "${{ github.ref_type }}" == "tag" ]]; then
+          VERSION=${GITHUB_REF_NAME#v}
+        else
+          VERSION="PR-${GITHUB_SHA::7}"
+        fi
 
-          cat <<EOF > batocera-pkg/.PKGINFO
-          pkgname = batocode-arcade
-          pkgver = ${VERSION}
-          pkgdesc = Batocode Arcade build for Batocera
-          arch = ${PKG_ARCH}
-          group = ports
-          packager = github-actions
-          url = https://github.com/${GITHUB_REPOSITORY}
-          EOF
+        if [[ "${{ matrix.arch }}" == "x64" ]]; then
+          SOURCE_UNPACKED_DIR="linux-unpacked"
+          PKG_ARCH="x86_64"
+        else
+          SOURCE_UNPACKED_DIR="linux-${{ matrix.arch }}-unpacked"
+          PKG_ARCH="aarch64"
+        fi
 
-      - name: Create tarball
-        id: create_tarball
-        run: |
-          set -e
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF##refs/tags/}
-            VERSION=${VERSION#v}
-          else
-            VERSION="pr-${GITHUB_SHA:0:7}"
-          fi
+        TARGET_PACKAGE_DIR_NAME="Makocera-linux-${{ matrix.arch }}-$VERSION"
+        PACKAGE_STAGE_DIR="dist/$TARGET_PACKAGE_DIR_NAME"
 
-          TAR_NAME="batocode-arcade-${VERSION}-${{ matrix.arch }}.tar.gz"
-          tar -czf "dist/$TAR_NAME" -C dist "linux-${{ matrix.arch }}-unpacked"
-          echo "tarball_path=dist/$TAR_NAME" >> $GITHUB_OUTPUT
-          echo "tarball_name=$TAR_NAME" >> $GITHUB_OUTPUT
+        mkdir -p "$PACKAGE_STAGE_DIR/Makocera"
 
-      - name: Create Batocera Pacman package
-        id: create_pacman_pkg
-        run: |
-          set -e
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF##refs/tags/}
-            VERSION=${VERSION#v}
-          else
-            VERSION="pr-${GITHUB_SHA:0:7}"
-          fi
+        shopt -s dotglob
+        mv "dist/$SOURCE_UNPACKED_DIR"/* "$PACKAGE_STAGE_DIR/Makocera/"
+        shopt -u dotglob
 
-          if [[ "${{ matrix.arch }}" == "x64" ]]; then
-            PKG_ARCH="x86_64"
-          else
-            PKG_ARCH="aarch64"
-          fi
+        rmdir "dist/$SOURCE_UNPACKED_DIR"
 
-          tar --zstd -cf "batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst" -C batocera-pkg .
-          echo "pacman_pkg_path=batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst" >> $GITHUB_OUTPUT
+        echo '#!/bin/bash' > "$PACKAGE_STAGE_DIR/Makocera.sh"
+        echo 'DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"' >> "$PACKAGE_STAGE_DIR/Makocera.sh"
+        echo '"$DIR/Makocera/makocera" --no-sandbox' >> "$PACKAGE_STAGE_DIR/Makocera.sh"
+        chmod +x "$PACKAGE_STAGE_DIR/Makocera.sh"
 
-      - name: Create pacman repo (optional)
-        run: |
-          set -e
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF##refs/tags/}
-            VERSION=${VERSION#v}
-          else
-            VERSION="pr-${GITHUB_SHA:0:7}"
-          fi
+        cat << EOF > "$PACKAGE_STAGE_DIR/Makocera.sh.keys"
+        {
+            "actions_player1": [
+                {
+                    "trigger": [
+                        "hotkey",
+                        "start"
+                    ],
+                    "type": "key",
+                    "target": [
+                        "KEY_LEFTALT",
+                        "KEY_F4"
+                    ]
+                }
+            ]
+        }
+        EOF
 
-          if [[ "${{ matrix.arch }}" == "x64" ]]; then
-            PKG_ARCH="x86_64"
-          else
-            PKG_ARCH="aarch64"
-          fi
+        # Batocera package structure
+        mkdir -p batocera-pkg/userdata/roms/ports
+        cp -r "$PACKAGE_STAGE_DIR/Makocera.sh" batocera-pkg/userdata/roms/ports/
+        cp -r "$PACKAGE_STAGE_DIR/Makocera.sh.keys" batocera-pkg/userdata/roms/ports/
+        cp -r "$PACKAGE_STAGE_DIR/Makocera/" batocera-pkg/userdata/roms/ports/
+        # Optionally: cp gamelist.xml, images, etc.
 
-          mkdir -p pacman-repo
-          cp "batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst" pacman-repo/
-          cd pacman-repo
-          sudo apt-get update && sudo apt-get install -y arch-install-scripts
-          repo-add batocode-arcade.db.tar.gz "batocode-arcade-${VERSION}-${PKG_ARCH}.pkg.tar.zst"
+        # Batocera .PKGINFO
+        cat <<PKGINFO > batocera-pkg/.PKGINFO
+        pkgname = makocera
+        pkgver = $VERSION
+        pkgdesc = Makocera for Batocera Linux
+        arch = $PKG_ARCH
+        group = ports
+        packager = github-actions
+        url = https://github.com/${GITHUB_REPOSITORY}
+        PKGINFO
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: batocode-arcade-${{ matrix.arch }}-${{ github.event_name == 'pull_request' && format('pr-{0}', github.sha) || github.ref_name }}
-          path: |
-            dist/*.tar.gz
-            *.pkg.tar.zst
-            pacman-repo/*
-          retention-days: 5
+        echo "target_package_dir_name=$TARGET_PACKAGE_DIR_NAME" >> $GITHUB_OUTPUT
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "pkg_arch=$PKG_ARCH" >> $GITHUB_OUTPUT
+
+    - name: Create final tar.gz bundle
+      id: create_tarball
+      run: |
+        VERSION="${{ steps.prepare_package.outputs.version }}"
+        TARGET_DIR_TO_TAR="${{ steps.prepare_package.outputs.target_package_dir_name }}"
+        cd dist
+        TAR_NAME="makocera-${VERSION}-${{ matrix.arch }}.tar.gz"
+        tar -czf "$TAR_NAME" "$TARGET_DIR_TO_TAR"
+        echo "tarball_path=$PWD/$TAR_NAME" >> $GITHUB_OUTPUT
+        echo "tarball_name=$TAR_NAME" >> $GITHUB_OUTPUT
+
+    - name: Create Batocera Pacman Package
+      id: create_pacman_pkg
+      run: |
+        VERSION="${{ steps.prepare_package.outputs.version }}"
+        PKG_ARCH="${{ steps.prepare_package.outputs.pkg_arch }}"
+        tar --zstd -cf "makocera-${VERSION}-${PKG_ARCH}.pkg.tar.zst" -C batocera-pkg .
+        mkdir -p pacman-repo
+        cp "makocera-${VERSION}-${PKG_ARCH}.pkg.tar.zst" pacman-repo/
+
+    - name: Create pacman repo metadata
+      run: |
+        sudo apt-get update && sudo apt-get install -y arch-install-scripts
+        cd pacman-repo
+        repo-add makocera.db.tar.gz *.pkg.tar.zst
+
+    - name: Upload Build Artifact (for GitHub Actions UI)
+      uses: actions/upload-artifact@v4
+      with:
+        name: makocera-linux-${{ matrix.arch }}-${{ github.ref_name || github.event.pull_request.head.sha }}
+        path: |
+          ${{ steps.create_tarball.outputs.tarball_path }}
+          makocera-*.pkg.tar.zst
+          pacman-repo/*
+        retention-days: 5
+
+    - name: Comment on PR with artifact links
+      if: github.event_name == 'pull_request'
+      uses: gavv/pull-request-artifacts@v2
+      with:
+        commit: ${{ github.event.pull_request.head.sha }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        artifacts: ${{ steps.create_tarball.outputs.tarball_path }}
+        comment-title: "📦 Makocera Build Artifacts"
+        comment-message: "Here are the latest build artifacts for this Pull Request:"
+
+    - name: Create GitHub Release and Upload Bundled Asset
+      id: create_release
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ github.ref_name }}
+        files: |
+          ${{ steps.create_tarball.outputs.tarball_path }}
+          makocera-*.pkg.tar.zst
+        append_body: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Deploy Pacman Repo to GitHub Pages
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: ./pacman-repo
